# TUHub

./: .gitignore  README.md  snake.c
DP/assignment1_src/: build.sbt
DP/assignment1_src/src/main/scala/assignment1/groupXX/: dp-task1-77.scala
DP/assignment1_src/src/test/scala/assignment1/groupXX/: dp-task1-xx-test.scala
DP/assignment2_src_empty/: build.sbt
DP/assignment2_src_empty/src/main/scala/assignment2/group77/: dp-task2-77.scala
DP/assignment2_src_empty/src/main/scala/assignment2/group77/leader_election/: CoordinatingActor.scala  LEMain.scala  Processor.scala
DP/assignment2_src_empty/src/test/scala/assignment2/groupXX/: dp-task2-XX-test.scala
DataBases/ex2/PythonExample/: InsertData.py  README_py.md  run_InsertData.sh
DataBases/ex2/PythonExample/DBExercise02_11819382/: CreateSchema.sql  ExplainQueries.sql  Queries.sql  run_IngestData.sh
DataBases/ex3/: BTree.tex  Transactions.sql  Tuning.sql
DataBases/ex4/: Queries.sql  QueriesDataset.py  QueriesRDD.py
GAI/: .~lock.null.odt#  Abgabe_A1.tex  exerc1_GAI.odt  genetalgor.py  null.odt  prota.py
TheoCS/ex2/: ex2.tex
TheoCS/ex3/: ex_3.tex
TheoCS/ex4/: ex4.tex
algo_games/: AS_assignment_01db.tex  user_token.txt
algo_games/as-examples/: CMakeLists.txt  build-examples.sh  dependencies.txt  gen-netcode.sh  readme.txt
algo_games/as-examples/client-getusertoken/: CMakeLists.txt  main-client-getusertoken.cpp
algo_games/as-examples/client-groupregistration/: CMakeLists.txt  main-client-groupregistration.cpp
algo_games/as-examples/client-setpseudonym/: CMakeLists.txt  main-client-setpseudonym.cpp
algo_games/as-examples/client-userregistration/: CMakeLists.txt  main-client-userregistration.cpp
algo_games/as-examples/example-client-dom-cpp/: CMakeLists.txt  GameClient.cpp  GameClient.h  Helper.h  main-example-client-dom.cpp
algo_games/as-examples/netcode/cpp/: dominect.grpc.pb.cc  dominect.grpc.pb.h  dominect.pb.cc  dominect.pb.h  dots-and-boxes.grpc.pb.cc  dots-and-boxes.grpc.pb.h  dots-and-boxes.pb.cc  dots-and-boxes.pb.h  netcode.grpc.pb.cc  netcode.grpc.pb.h  netcode.pb.cc  netcode.pb.h  nim.grpc.pb.cc  nim.grpc.pb.h  nim.pb.cc  nim.pb.h
algo_games/pract/: find_tr.py  main-example-client-dozo.py
algo_games/pract/netcode/: dominect_pb2.py  dots_and_boxes_pb2.py  dozo_pb2.py  netcode_pb2.py  nim_pb2.py
num_opt/: logistics_problem.py  main.py  main.tex
num_opt/ass2/: main.py
num_opt/ass3/: proba.py
num_opt/ass3/subm/: main.py  model_GD.json
num_opt/ass4/: main.py
var_code/: algo_f.py  birthday.py  cards.py  ccc.c  comb.py  powers.py  printtest.py  rand.py  rand2.py  rand3.py  rand4.py  stringspr.py  threadLockex.c  triangle.py
