##################################
# Author: Martin Wistauder
# Date: 12.10.2020
# Version: 1.1
##################################
cmake_minimum_required(VERSION 3.10)

add_subdirectory(client-userregistration)
add_subdirectory(client-groupregistration)
add_subdirectory(client-getusertoken)
add_subdirectory(client-setpseudonym)
add_subdirectory(example-client-dom-cpp)
